backported to 1.15.2